--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <title>Countdown</title>
+    <title>阿巴阿巴</title>
     <style>
 
     </style>
@@ -11,5 +11,5 @@
 </head>
 <body>
  
-<a href="https://logwork.com/countdown-77ma" onclick="return false" class="countdown-timer" data-timezone="Asia/Shanghai" data-date="2022-05-20 00:00">Make-Life Breakdown</a>
+<a href="https://logwork.com/countdown-77ma" onclick="return false" class="countdown-timer" data-timezone="Asia/Shanghai" data-date="2022-05-20 00:00">Make-Life Countdown</a>
 </body>
