add new features to the centered button

--- a/balloon.html
+++ b/balloon.html
@@ -29,6 +29,12 @@
         }
     </script>
     <style>
+        #art {
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: cover;
+        }
+
         .container {
             text-align: center;
         }
@@ -78,5 +84,8 @@ _     _ ___     _
 </pre>
 </div>
 </div>
+<script>
+    switchAppearance()
+</script>
 </body>
 </html>
