--- a/balloon.html
+++ b/balloon.html
@@ -29,7 +29,12 @@
         }
     </script>
     <style>
+        button {
+            cursor: url("icon_light_24.png") 12 12, auto;
+        }
+        
         #art {
+            cursor: url("icon-birthday-64.png") 32 32, auto;
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
