--- a/birthCake.html
+++ b/birthCake.html
@@ -72,6 +72,7 @@
     </script>
     <style>
         #art {
+            cursor: url("lighter_icon.png") 15 0, auto;
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
@@ -95,6 +96,15 @@
             background-position: 40% 50%;
             border: none;
         }
+        
+        button {
+            cursor: url("icon_light_24.png") 12 12, auto;
+        }
+
+        input {
+            cursor: url("icon-stick-40.png") 20 20, auto;
+        }
+
     </style>
 </head>
 <body style="height: 100%;">
