import external style sheet

--- a/birthCake.html
+++ b/birthCake.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>生日整活1.0.0</title>
-    <link href="https://allfont.net/allfont.css?fonts=flame" rel="stylesheet" type="text/css" />
     <script>
         // light
         function switchAppearance(e) {
@@ -71,6 +70,7 @@
         window.onload = (event) => { alert( "获得 打火机*1\n 🔥🚬"); };
     </script>
     <style>
+        @import url(https://allfont.net/allfont.css?fonts=flame);
         #art {
             cursor: url("lighter_icon.png") 15 0, auto;
             background-repeat: no-repeat;
