redirect by date

--- a/birthCake.html
+++ b/birthCake.html
@@ -111,6 +111,7 @@
 
         input {
             cursor: url("icon-stick-40.png") 20 20, auto;
+            border-radius: 50%;
         }
 
     </style>
@@ -148,7 +149,7 @@
        ;;@;;;;@@@@@@@@;@      @.@      ;@@@;;;@@@@@@;;;;@@;
        ;;;;;;;@@@@;@@;;@    @@ . @@    ;;@;;;;@@;@@@;;;;;;;
        ;;;;;;;;@@;;;;;;;  @@   .   @@  ;;;;;;;;;;;@@;;;;@;;
-       ;;;;;;;;;;;;;;;;;@@  <input id="remain" type="button" value="O" onclick="onClickCenter()" style="height: 50px; width: 50px; background-color: #d0eaf8;">   @@;;;;;;;;;;;;;;;;@@@;;
+       ;;;;;;;;;;;;;;;;;@@  <input id="remain" type="button" value="O" onclick="onClickCenter()" style="height: 50px; width: 50px; background-color: #d0eaf8;">  @@;;;;;;;;;;;;;;;;@@@;;
    ,%%%;;;;;;;;@;;;;;;;;       .       ;;;;;;;;;;;;;;;;@@;;%%%,
 .%%%%%%;;;;;;;@@;;;;;;;;     ,%%%,     ;;;;;;;;;;;;;;;;;;;;%%%%%%,
 .%%%%%%%;;;;;;;@@;;;;;;;;   ,%%%%%%%,   ;;;;;;;;;;;;;;;;;;;;%%%%%%%,
