--- a/balloon.html
+++ b/balloon.html
@@ -2,7 +2,7 @@
 <html style="height: 100%;">
 <head>
     <meta charset="UTF-8">
-    <title>生日整活1.0.0</title>
+    <title>🎈</title>
     <script>
         function switchAppearance(e) {
             console.log("event handler triggered");
