--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <title>传送点击计时器</title>
+    <title>传送门</title>
  
     <script>
         (function(e,i,h,f,c,b,d){
@@ -27,8 +27,11 @@
             return false
         }
     </script>
+    <script>
+        alert("(▰˘◡˘▰): 点击计时器进行传送")
+    </script>
 </head>
 <body>
  
-<a href="https://logwork.com/countdown-77ma" onclick="return routeByDate()" class="countdown-timer" data-timezone="Asia/Shanghai" data-date="2022-05-20 00:00">Make-Life Countdown</a>
+<a href="https://logwork.com/countdown-77ma" onclick="return routeByDate()" class="countdown-timer" data-timezone="Asia/Shanghai" data-date="2022-05-20 00:00">生日整活 v1.0.0</a>
 </body>
